SERVER-51770 add std::error_code functions to errno_util

Remove errnoWithPrefix, errnoAndDescription