src/mongo/util/errno_util.h
@@ -29,6 +29,7 @@
 
 #pragma once
 
+#include <system_error>
 #include <utility>
 
 #include "mongo/base/string_data.h"
@@ -36,20 +37,54 @@
 namespace mongo {
 
 /**
- * Return a string containing the system errno (error number) and corresponding error message.
- */
-std::string errnoWithDescription(int errorcode = -1);
-
-/**
- * Return the errno (error number) and the errnoWithDescription() string.
- */
-std::pair<int, std::string> errnoAndDescription();
-
-/**
- * Return a string with the given prefix followed by the errnoWithDescription() string.
+ * Returns `{errno, std::generic_category()}`.
+ * Windows has both Windows errors and POSIX errors. That is, there's a
+ * `GetLastError` and an `errno`. They are tracked separately, and unrelated to
+ * each other.
  *
- * Useful in conjunction with uassert/massert.
+ * In practice, this function is useful only to handle the `errno`-setting POSIX
+ * compatibility functions on Windows.
+ *
+ * On POSIX systems, `std::system_category` is potentially a superset of
+ * `std::generic_category`, so `lastSystemError` should be preferred for
+ * handling system errors.
  */
-std::string errnoWithPrefix(StringData prefix);
+inline std::error_code lastPosixError() {
+    return std::error_code(errno, std::generic_category());
+}
+
+/**
+ * On POSIX, returns `{errno, std::system_category()}`.
+ * On Windows, returns `{GetLastError(), std::system_category()}`, but see `lastPosixError`.
+ */
+inline std::error_code lastSystemError() {
+#ifdef _WIN32
+    int e = GetLastError();
+#else
+    int e = errno;
+#endif
+    return std::error_code(e, std::system_category());
+}
+
+/**
+ * Returns `ec.message()`, possibly augmented to disambiguate unknowns.
+ *
+ * In libstdc++, the unknown error messages include the number. Windows and
+ * Libc++ do not include it. So if the code is an unknown, it is replaced with the
+ * message that libstdc++ would have given, which is the expanded format
+ * expression:
+ *     `"Unknown error {}"_format(ec.value())`
+ */
+std::string errorMessage(std::error_code ec);
+
+/** A system error code's error message. */
+inline std::string errnoWithDescription(int e) {
+    return errorMessage(std::error_code{e, std::system_category()});
+}
+
+/** The last system error code's error message. */
+inline std::string errnoWithDescription() {
+    return errorMessage(lastSystemError());
+}
 
 }  // namespace mongo
